# hikv

./: .gitignore  Cargo.toml  README.md  abi.proto  build.rs
examples/: _rustyline.rs  _sleddb.rs  client.rs  dummy_server.rs  server.rs  server_with_codec.rs  server_with_rocksdb.rs  server_with_sled.rs
src/: client.rs  error.rs  lib.rs  server.rs
src/ae/: handler.rs  mod.rs
src/net/: frame.rs  mod.rs
src/pb/: abi.rs  mod.rs
src/store/: memory.rs  mod.rs  rocks_db.rs  sleddb.rs
