[package]
name = "hikv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.1"
flate2 = "1"
prost = "0.10"
dashmap = "5.3"
thiserror = "1.0"
tokio = { version = "1.18", features = ["rt", "rt-multi-thread", "io-util", "macros", "net", "fs"] }
serde = { version = "1", features = ["derive"] }
clap = { version = "3", features = ["derive"] }
rustyline = "9"
syntect = "5.0"
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
anyhow = "1"
serde_yaml = "0.8"

[build-dependencies]
prost-build = "0.10"